--- a/landing_page/app/css/style.css
+++ b/landing_page/app/css/style.css
@@ -1,3 +1,65 @@
-.selector-for-some-widget {
-    box-sizing: content-box;
-  }
+:root{
+  --white: #ffffff;
+  --darkgrey: #333333;
+  --blue: #3586ff;
+}
+
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body{
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-end;
+  min-height: 100vh;
+  background: var(--white);
+}
+
+header{
+  position: relative;
+  width: 100%;
+  background: var(--blue);
+  min-height: 100px;
+  padding: 20px 50px;
+  display: flex;
+  justify-content: right;
+  align-items: right;
+}
+
+header .navbar{
+  text-decoration: none;
+}
+
+header .navlist{
+  text-decoration: none;
+}
+
+header .navlist li{
+  text-decoration: none;
+}
+
+header .navlist li a{
+  text-decoration: none;
+}
+
+main{
+
+}
+
+footer{
+  position: relative;
+  width: 100%;
+  background: var(--blue);
+  min-height: 100px;
+  padding: 20px 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+footer .social_icon{
+
+}
