--- a/landing_page/app/css/style.css
+++ b/landing_page/app/css/style.css
@@ -35,6 +35,7 @@ footer .social_icon{
   justify-content: center;
   align-items: center;
   margin: 10px 0;
+  flex-wrap: wrap;
 }
 
 footer .social_icon li{
