--- a/landing_page/app/css/style.css
+++ b/landing_page/app/css/style.css
@@ -1,13 +1,17 @@
+@import url('https://fonts.googleapis.com/css?family=Poppins:200,300,400,500,600,700,800,900&display=swap');
+
 :root{
   --white: #ffffff;
   --darkgrey: #333333;
   --blue: #3586ff;
+  --red: #f00000;
 }
 
 *{
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: 'Poppins', sans-serif;
 }
 
 body{
@@ -27,9 +31,68 @@ footer{
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
 }
 
-footer .social_icon{
+footer .wave{
+  position: absolute;
+  top: -100px;
+  left: 0;
+  width: 100%;
+  height: 100px;
+  background: url(../../media/img/wave.png);
+  background-size: 1000px 100px;
+}
+
+footer .wave#wave1{
+  z-index: 1000;
+  opacity: 1;
+  bottom: 0;
+  animation: animateWave 4s linear infinite;
+}
+
+footer .wave#wave2{
+  z-index: 999;
+  opacity: 0.5;
+  bottom: 10px;
+  animation: animateWave_02 4s linear infinite;
+}
+
+footer .wave#wave3{
+  z-index: 1000;
+  opacity: 0.2;
+  bottom: 15px;
+  animation: animateWave_02 3s linear infinite;
+}
+
+footer .wave#wave4{
+  z-index: 999;
+  opacity: 0.7;
+  bottom: 20px;
+  animation: animateWave_02 3s linear infinite;
+}
+
+@keyframes animateWave{
+  0%{
+    background-position-x: 1000px;
+  }
+  100%{
+    background-position-x: 0px;
+  }
+}
+
+@keyframes animateWave_02{
+  0%{
+    background-position-x: 0px;
+  }
+  100%{
+    background-position-x: 1000px;
+  }
+}
+
+
+footer .social_icon, 
+footer .menu{
   position: relative;
   display: flex;
   justify-content: center;
@@ -38,7 +101,8 @@ footer .social_icon{
   flex-wrap: wrap;
 }
 
-footer .social_icon li{
+footer .social_icon li,
+footer .menu li{
   list-style: none;
 }
 
@@ -52,4 +116,25 @@ footer .social_icon li a{
 
 footer .social_icon li a:hover{
   transform: translateY(-10px);
+}
+
+footer .menu li a{
+  font-size: 1.2em;
+  color: var(--white);
+  margin: 0 10px;
+  display: inline-block;
+  text-decoration: none;
+  opacity: 0.75;
+}
+
+footer .menu li a:hover{
+  opacity: 1;
+}
+
+footer p{
+  color: var(--white);
+  text-align: center;
+  margin-top: 15px;
+  margin-bottom: 10px;
+  font-size: 1.1em;
 }
