--- a/landing_page/app/css/style.css
+++ b/landing_page/app/css/style.css
@@ -13,127 +13,35 @@
   font-family: 'Poppins', sans-serif;
 }
 
-body{
+header nav{
   display: flex;
-  justify-content: flex-end;
-  align-items: flex-end;
-  min-height: 100vh;
-  background: var(--white);
-}
-
-footer{
-  position: relative;
-  width: 100%;
+  justify-content: space-around;
+  align-items: center;
+  min-height: 8vh;
   background: var(--blue);
-  min-height: 100px;
-  padding: 20px 50px;
+}
+
+header .logo{
+  color: var(--white);
+  text-transform: uppercase;
+  letter-spacing: 5px;
+  font-size: 20px;
+}
+
+header .nav_links{
   display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
+  justify-content: space-around;
+  width: 50%;
 }
 
-footer .wave{
-  position: absolute;
-  top: -100px;
-  left: 0;
-  width: 100%;
-  height: 100px;
-  background: url(../../media/img/wave.png);
-  background-size: 1000px 100px;
-}
-
-footer .wave#wave1{
-  z-index: 1000;
-  opacity: 1;
-  bottom: 0;
-  animation: animateWave 4s linear infinite;
-}
-
-footer .wave#wave2{
-  z-index: 999;
-  opacity: 0.5;
-  bottom: 10px;
-  animation: animateWave_02 4s linear infinite;
-}
-
-footer .wave#wave3{
-  z-index: 1000;
-  opacity: 0.2;
-  bottom: 15px;
-  animation: animateWave_02 3s linear infinite;
-}
-
-footer .wave#wave4{
-  z-index: 999;
-  opacity: 0.7;
-  bottom: 20px;
-  animation: animateWave_02 3s linear infinite;
-}
-
-@keyframes animateWave{
-  0%{
-    background-position-x: 1000px;
-  }
-  100%{
-    background-position-x: 0px;
-  }
-}
-
-@keyframes animateWave_02{
-  0%{
-    background-position-x: 0px;
-  }
-  100%{
-    background-position-x: 1000px;
-  }
-}
-
-
-footer .social_icon, 
-footer .menu{
-  position: relative;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin: 10px 0;
-  flex-wrap: wrap;
-}
-
-footer .social_icon li,
-footer .menu li{
+header .nav_links li {
   list-style: none;
 }
 
-footer .social_icon li a{
-  font-size: 2em;
+header.nav_links li a{
   color: var(--white);
-  margin: 0 10px;
-  display: inline-block;
-  transition: 0.5s;
-}
-
-footer .social_icon li a:hover{
-  transform: translateY(-10px);
-}
-
-footer .menu li a{
-  font-size: 1.2em;
-  color: var(--white);
-  margin: 0 10px;
-  display: inline-block;
   text-decoration: none;
-  opacity: 0.75;
-}
-
-footer .menu li a:hover{
-  opacity: 1;
-}
-
-footer p{
-  color: var(--white);
-  text-align: center;
-  margin-top: 15px;
-  margin-bottom: 10px;
-  font-size: 1.1em;
+  letter-spacing: 3px;
+  font-weight: bold;
+  font-size: 14px;
 }
