--- a/landing_page/app/css/style.css
+++ b/landing_page/app/css/style.css
@@ -1,47 +1,92 @@
 @import url('https://fonts.googleapis.com/css?family=Poppins:200,300,400,500,600,700,800,900&display=swap');
 
 :root{
-  --white: #ffffff;
-  --darkgrey: #333333;
-  --blue: #3586ff;
+  --background-color: rgb(248, 248, 248);
+  --lightgrey: #C7D0FF;
+  --darkgrey: #383838;
+  --blue: linear-gradient(134deg, #6A98F0 0%, #4961DC 99%);
+  --lightblue: linear-gradient(134deg, #6A98F0 0%, #4961DC 99%);
+  --darkblue: #6D83F2;
 }
 
 *{
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
   font-family: 'Poppins', sans-serif;
 }
 
-header nav{
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  min-height: 8vh;
-  background: var(--blue);
+nav{
+  position: relative;
+  margin: 270px auto 0;
+  width: 590px;
+  height: 50px;
+  background: #34495e;
+  border: 8px;
+  font-size: 0;
+  box-shadow: 0 2px 3px 0 rgba(0, 0, 0, .1);
 }
 
-header .logo{
-  color: var(--white);
+nav a{
+  font-size: 15px;
   text-transform: uppercase;
-  letter-spacing: 5px;
-  font-size: 20px;
-}
-
-header .nav_links{
-  display: flex;
-  justify-content: space-around;
-  width: 50%;
-}
-
-header .nav_links li {
-  list-style: none;
-}
-
-header.nav_links li a{
-  color: var(--white);
+  color: white;
   text-decoration: none;
-  letter-spacing: 3px;
-  font-weight: bold;
-  font-size: 14px;
+  line-height: 50px;
+  position: relative;
+  z-index: 1;
+  display: inline-block;
+  text-align: center;
+}
+
+nav .animation{
+  position: absolute;
+  height: 5px;
+  bottom: 0;
+  z-index: 0;
+  background: #1abc9c;
+  border-radius: 8px;
+  transition: all .5s ease 0s;
+}
+
+a:nth-child(1){
+  width: 100px;
+}
+
+nav .home_navbar, a:nth-child(1):hover~.animation{
+  width: 100px;
+  left: 0;
+}
+
+a:nth-child(2){
+  width: 110px;
+}
+
+nav .home_navbar, a:nth-child(2):hover~.animation{
+  width: 110px;
+  left: 100px;
+}
+
+a:nth-child(3){
+  width: 100px;
+}
+
+nav .home_navbar, a:nth-child(3):hover~.animation{
+  width: 100px;
+  left: 210px;
+}
+
+a:nth-child(4){
+  width: 160px;
+}
+
+nav .home_navbar, a:nth-child(4):hover~.animation{
+  width: 160px;
+  left: 310px;
+}
+
+a:nth-child(5){
+  width: 120px;
+}
+
+nav .home_navbar, a:nth-child(5):hover~.animation{
+  width: 120px;
+  left: 470px;
 }
