updated some content and styles

--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -9,8 +9,8 @@ $footer: #151414;
 // #######################################
 
 
-$primary:       $purple-dark;
-$secondary:     $pink;
+$primary:       #3250e2;
+$secondary:     #5689e7;
 
 // ACCORDION OVERRIDES
 $accordion-padding-y:                     1.5rem;// LEAVE THE PADDING-Y TO DEFAULT
