--- a/scss/sections/_footer.scss
+++ b/scss/sections/_footer.scss
@@ -93,6 +93,9 @@
                 color: $primary;
             }
         }
+        .contact_footer:hover {
+            color: $white;
+        }
     }
 }
 
