--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -2,6 +2,7 @@
 $purple-dark:  #9926f0;
 $purple-light:  #BB6EF5;
 $pink:    #d122e3;
+$white: #ffffff;
 $footer: #151414;
 
 // #######################################
@@ -17,9 +18,30 @@ $accordion-padding-y:                     1.5rem;// LEAVE THE PADDING-Y TO DEFAU
 $accordion-padding-x:                     1.5rem;// LEAVE THE PADDING-X TO DEFAULT
 $accordion-icon-color:                    $primary; 
 $accordion-icon-active-color:           $secondary;
+
 // $accordion-icon-width:                    1.875rem; // LEAVE THE WIDTH TO DEFAULT
 $accordion-button-icon:         url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='#{$accordion-icon-color}'><path fill-rule='evenodd' d='M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z'/> <path d='M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z'/></svg>");
 $accordion-button-active-icon:  url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='#{$accordion-icon-active-color}'><path fill-rule='evenodd' d='M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z'/>  <path d='M4 8a.5.5 0 0 1 .5-.5h7a.5.5 0 0 1 0 1h-7A.5.5 0 0 1 4 8z'/></svg>");
+
+// CUSTOM SCROLLBAR
+
+::-webkit-scrollbar {
+    width: 0.8vw;
+
+    &-track {
+        background: $white;
+    }
+
+    &-thumb {
+        background: $primary;
+
+        &:hover {
+            transition: background-color 400ms linear;
+            background-color: #3a56e2;
+        }
+    }
+
+}
 
 // ##########################################
 //   OPTION 1: 
