updated scrollbar hover effect

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,7 +20,7 @@
 }
 ::-webkit-scrollbar-thumb:hover {
   transition: background-color 400ms linear;
-  background-color: #3a56e2;
+  background-color: #435ee4;
 }
 
 /*!
