--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -36,7 +36,7 @@ $accordion-button-active-icon:  url("data:image/svg+xml,<svg xmlns='http://www.w
 
         &:hover {
             transition: background-color 400ms linear;
-            background-color: #3a56e2;
+            background-color: #435ee4;
         }
     }
 
